update the manuscript

--- a/jupyterbook/manuscript.ipynb
+++ b/jupyterbook/manuscript.ipynb
@@ -168,9 +168,9 @@
    "source": [
     "Additionally, the surface morphology of the films was characterized using tapping mode atomic force microscopy (AFM) ({numref}`figure3`). A comparison of samples G1 through G5 reveals a progressive decrease in surface roughness with each subsequent deposition. This trend is accompanied by a noticeable reduction in the density of surface pits or holes. Such holes are typically attributed to insufficient deposition rates. Paradoxically, however, one would expect a slight reduction in growth rate with successive depositions until a steady state is reached. Counterintuitively—and despite current understanding of plume dynamics evolution—the observed morphology is often proposed to be mitigated by increasing the growth rate, which can be achieved through higher laser repetition rates, increased fluence, or lower ambient pressure.\n",
     "\n",
-    "Further analysis of interpolated line traces from AFM scans ({numref}`figure3g`) revealed that these holes likely penetrate to the substrate surface. Such features likely result from non-ideal deposition dynamics during the initial growth stages of SrRuO$_3$. One plausible hypothesis is that initial instability in the deposition conditions leads to unstable plume dynamics, disrupting proper adatom bonding to the SrTiO$_3$ substrate—an essential requirement for layer-by-layer growth during the early stages. As a result, subsequent adatoms struggle to deposit uniformly due to the persistent holes. Overall, our observations point to a marked improvement in thin film quality over time, consistent with conclusions drawn from XRD analyses. Additionally, the comparison between samples G1 and G2 suggests that target inhomogeneity plays a significant role in increasing surface roughness.\n",
+    "Further analysis of interpolated line traces from AFM scans ({numref}`figure3`)g revealed that these holes likely penetrate to the substrate surface. Such features likely result from non-ideal deposition dynamics during the initial growth stages of SrRuO$_3$. One plausible hypothesis is that initial instability in the deposition conditions leads to unstable plume dynamics, disrupting proper adatom bonding to the SrTiO$_3$ substrate—an essential requirement for layer-by-layer growth during the early stages. As a result, subsequent adatoms struggle to deposit uniformly due to the persistent holes. Overall, our observations point to a marked improvement in thin film quality over time, consistent with conclusions drawn from XRD analyses. Additionally, the comparison between samples G1 and G2 suggests that target inhomogeneity plays a significant role in increasing surface roughness.\n",
     "\n",
-    "Distinct differences in growth mode were also observed among the samples. In {numref}`figure3a`, the surface exhibits an island-like step-flow morphology, where step orientation appears to radiate from the center of circular clusters. This results in hybrid growth behavior combining features of both 2D and 3D growth. In contrast, {numref}`figure3c` and {numref}`figure3f` show step bunching, where several atomic steps coalesce to form terraces of greater height at irregular intervals. These features are more clearly resolved in the larger-area (10 $\\mu\\text{m}$ × 10 $\\mu\\text{m}$) image of {numref}`figure3a` and the higher-resolution (5 $\\mu\\text{m}$ × 5 $\\mu\\text{m}$) scans in {numref}`figureS1` . Deviations from uniform step-flow growth—such as island nucleation or step bunching—are often associated with less desirable film quality.\n"
+    "Distinct differences in growth mode were also observed among the samples. In {numref}`figure3`a, the surface exhibits an island-like step-flow morphology, where step orientation appears to radiate from the center of circular clusters. This results in hybrid growth behavior combining features of both 2D and 3D growth. In contrast, {numref}`figure3`c and {numref}`figure3`f show step bunching, where several atomic steps coalesce to form terraces of greater height at irregular intervals. These features are more clearly resolved in the larger-area (10 $\\mu\\text{m}$ × 10 $\\mu\\text{m}$) image of {numref}`figure3`a and the higher-resolution (5 $\\mu\\text{m}$ × 5 $\\mu\\text{m}$) scans in {numref}`figureS1` . Deviations from uniform step-flow growth—such as island nucleation or step bunching—are often associated with less desirable film quality.\n"
    ]
   },
   {
@@ -249,7 +249,7 @@
     "<img src=\"../figures/Figure4-Plume_area_distance_velocity_average.png\" style=\"width:auto;\">\n",
     "\n",
     "Plume sample frames and the plume metrics for plume description and evaluation.  \n",
-    "(a) Plume area over time for samples G1–t5 (s1) and C-G6. A series of plume images are included as examples to illustrate how plume area is determined.  \n",
+    "(a) Plume area over time for samples G1–G5 and C-G6. A series of plume images are included as examples to illustrate how plume area is determined.  \n",
     "(b) Plume transport distance over time. Example plume images are also shown with markers indicating plume position.  \n",
     "(c) Plume transport velocity as a function of distance. The red dashed lines mark the velocity range used for estimating the incident velocity.\n",
     ":::\n"
@@ -278,36 +278,95 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
     }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    ":::{figure-md} figure5\n",
+    "<img src=\"../figures/Figure5-Temporal_variation-violinplot_heatmaps.png\" style=\"width:auto;\">\n",
+    "\n",
+    "Violin plots and heatmaps of plume key metrics across samples G1–G5.  \n",
+    "(a) Statistical summary of maximum plume area throughout the deposition process.  \n",
+    "(b) Statistical summary of plume incident velocity throughout the deposition process.  \n",
+    "(c–g) Heatmaps of maximum plume area for samples G1–G5.  \n",
+    "(h–l) Heatmaps of plume incident velocity for samples G1–G5.\n",
+    ":::"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
     }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "Our results reveal a progressive decrease in the pulse-to-pulse standard deviation of both maximum area and incident velocity from G1 to G5. This trend indicates increasingly stable plume behavior with continued use of the same target. The observed stabilization is likely a result of the evolving target surface morphology under repeated laser ablation, which leads to more uniform plume generation. These improvements in plume consistency correlate strongly with enhancements in thin film quality, including higher crystallinity and reduced defect density. To further support this observation, we provide heatmaps of plume maximum area and incident velocity in {numref}`figure5`, which visually demonstrate increased plume stability across the deposition sequence. In particular, sample G1 exhibits clear periodic fluctuations in plume behavior, suggesting plume instability caused by non-uniform target surface morphology during its growth.\n",
+    "\n",
+    "Notably, unstable plume dynamics—characterized by significant variations in maximum area and incident velocity—can disrupt growth processes, result in defects, and alter chemistry. These instabilities may lead to undesirable stoichiometric deviations in the plume composition and inconsistencies in substrate surface dynamics during crystallization, which may alter the structure and growth modes of the heterostructures. This relationship highlights the importance of stability in experimental conditions when determining the resulting thin-film properties. \n",
+    "\n",
+    "While our findings demonstrate a clear correlation between target surface evolution and plume behavior, our analysis of pre-ablation processes remains qualitative. Factors such as target material composition, microstructure, and laser fluence may all influence the evolution of the target surface in ways that vary across different systems. As such, it is difficult to offer specific procedural guidelines for pre-ablation treatment at this stage. Nonetheless, the broader relationship between target conditioning and plume stability is evident. Overall, this analysis highlights the critical role of in-situ characterization in achieving reliable and reproducible thin film synthesis. By providing real-time feedback on plume dynamics, techniques such as PDI allow for early detection and mitigation of growth instabilities, facilitating the deposition of thin films with improved structural and functional properties."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Plume Dynamics Correlation with Spatial Variation in the Target Surface\n",
+    "\n",
+    "To further investigate the origins of plume dynamics variability, we examined the correlation between plume behavior and target surface morphology. We hypothesize that non-uniform ablation due to target surface contamination or morphology can introduce fluctuations in plume energy, composition, and deposition efficiency. These fluctuations may, in turn, influence thin film quality. To test this hypothesis, we compared two samples: sample C-G6, which was deposited using a target with localized surface contamination, and sample G5, which was grown under identical conditions but with a more uniform target surface.\n",
+    "\n",
+    "As described in the previous section, sample C-G6 exhibited degraded structural quality, characterized by increased surface roughness, a broader SrRuO$_3$ diffraction peak, and less pronounced Laue fringes. In contrast, sample G5 showed clear signs of superior film quality. To evaluate whether plume behavior reflects these differences, we applied statistical analysis to plume dynamics and visualized the results using violin plots and heatmaps ({numref}`figure6`). The violin plots of maximum plume area and incident velocity show broader and more variable distributions for sample C-G6 compared to G5. These results suggest that plume dynamics were less stable throughout the deposition of C-G6, consistent with its poorer structural quality.\n",
+    "\n",
+    "A more detailed time-resolved analysis, presented in the form of heatmaps, offers further insight. For sample C-G6, the heatmaps reveal periodic increases in plume area and incident velocity, indicating intermittent plume instability linked to spatial inhomogeneities on the target. In contrast, this variability is significantly reduced in sample G5, which exhibits a more consistent and uniform plume profile over time. These observations suggest that spatial irregularities on the target surface can disrupt plume formation in a manner similar to what is observed during the early stages of target usage, before the surface becomes conditioned through repeated ablation. In both cases, such instabilities result in plume fluctuations that negatively impact deposition consistency and film quality.\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    ":::{figure-md} figure6\n",
+    "<img src=\"../figures/Figure6-Spatial_inhomogeneity_combined.png\" style=\"width:auto;\">\n",
+    "\n",
+    "**Figure 6**: Statistical analysis of plume dynamics.  \n",
+    "(a, b) Violin plots showing maximum plume area and incident velocity for samples G5 and C-G6.  \n",
+    "(c, d) Heatmaps of maximum plume area across plume indices for samples G5 and C-G6.  \n",
+    "(e, f) Heatmaps of incident velocity across plume indices for samples G5 and C-G6.  \n",
+    "Each heatmap represents the corresponding plume metric as color intensity using the \"viridis\" colormap. The x-axis indicates plume index, and the y-axis represents plume evolution time.\n",
+    ":::\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This study demonstrates a systematic exploration of the interplay between target surface morphology, laser-induced plume dynamics, and the resulting structural quality of SrRuO$_3$ thin films grown by pulsed laser deposition (PLD). By implementing a high-speed, in-situ Plume Dynamic Imaging (PDI) system and a supporting analysis framework (*Plume-Learn*), we captured the evolution of plume behavior at the pulse-by-pulse level and correlated it with film quality across a range of target conditions.\n",
+    "\n",
+    "Our results reveal that the condition of the target surface—both over time and across spatial regions—plays a critical role in determining plume stability. As the target is gradually conditioned through repeated laser ablation, plume dynamics become increasingly stable, which coincides with improvements in film crystallinity, surface morphology, and interface coherence. In contrast, spatial inhomogeneities or surface contamination on the target lead to irregular plume characteristics, including fluctuations in cross-sectional area and velocity, which correlate with degraded film quality. Statistical visualization enabled a more nuanced assessment of plume variability, revealing patterns that would be obscured by simple averaging. These analyses provided insight into the underlying mechanisms that govern reproducibility in thin-film deposition, offering both qualitative and quantitative evidence for the importance of stable plume behavior.\n",
+    "\n",
+    "This work highlights the critical value of in-situ diagnostics not only for real-time process monitoring but also as a foundational element for future closed-loop control strategies. By providing immediate feedback on the physical processes driving film growth, tools like PDI allow researchers to identify instabilities before they manifest as structural defects. \n",
+    "\n",
+    "In the broader context of thin-film research, the insights gained here contribute to a deeper understanding of how target conditions and deposition dynamics influence material properties, and they help establish best practices for producing high-quality complex oxide thin films. Looking ahead, the methodology presented in this study lays the groundwork for integration with data-driven optimization and machine learning–assisted synthesis. As such approaches mature, they hold the potential to further automate and refine the thin-film growth process, enabling more precise control over structure, stoichiometry, and functional properties in next-generation oxide heterostructures.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "## Conclusion\n",
+    "This study presents a detailed investigation into how target surface morphology directly impacts plume dynamics and thin-film quality in PLD of SrRuO3, leveraging a high-speed, full-frame PDI system. Through pulse-by-pulse analysis of plume behavior, we establish that both temporal conditioning and spatial uniformity of the target surface are crucial for achieving stable plume characteristics. These, in turn, correlate strongly with improvements in film crystallinity, surface smoothness, and structural coherence.\n",
+    "\n",
+    "The findings underscore the importance of real-time diagnostic tools in modern thin-film synthesis workflows. Plume instability, whether stemming from early ablation irregularities or localized surface contamination, was shown to degrade film quality via fluctuations in plume energy and stoichiometry. By applying statistical analyses and machine learning-enabled metrics, we identified subtle plume variations that conventional averaging might obscure, thereby providing a more nuanced understanding of reproducibility challenges in PLD.\n",
+    "\n",
+    "Ultimately, this work positions PDI as a critical enabler for autonomous, closed-loop control in thin-film growth, offering actionable insights that can be generalized to other complex oxide systems. The methodologies developed here, combining advanced imaging, statistical modeling, and data-driven analysis, pave the way for predictive, adaptive, and highly reproducible oxide film synthesis, thus supporting the broader vision of intelligent materials fabrication platforms.\n"
+   ]
   },
   {
    "cell_type": "markdown",
