--- a/jupyterbook/manuscript.ipynb
+++ b/jupyterbook/manuscript.ipynb
@@ -35,8 +35,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "Epitaxial complex oxide thin films have become indispensable in next-generation electronics, catalysis, and energy storage, owing to their tunable electronic, magnetic, and ionic transport properties, which can be precisely engineered through strain, stoichiometry, and defects {cite:p}`Kelley2020-di,Bain2017-zx,Agar2015-ta,Xu2020-ih,Haeni2004-pc,Pesquera2020-xj,Eason2007-hm,Damodaran2017-xm,Agar2014-dg,Yichen_Guo_Peter_Meisenheimer_Shuyu_Qin_Xinqiao_Zhang_Julian_Goddy_Ramamoorthy_Ramesh_Lane_W_Martin_and_Joshua_C_Agar_undated-gb,Saremi2019-kb,Saremi2018-np`.   \n",
-    "Most of these materials require far-from-equilibrium synthesis methods to achieve complex stoichiometry, finely tuned heterointerfaces, superlattices, and compositional gradients—all of which are essential for enabling emergent functionalities. \n",
+    "Epitaxial complex oxide thin films have become indispensable in next-generation electronics, catalysis, and energy storage, owing to their tunable electronic, magnetic, and ionic transport properties, which can be precisely engineered through strain, stoichiometry, and defects {cite:p}`Kelley2020-di,Bain2017-zx,Agar2015-ta,Xu2020-ih,Haeni2004-pc,Pesquera2020-xj,Eason2007-hm,Damodaran2017-xm,Agar2014-dg,Yichen_Guo_Peter_Meisenheimer_Shuyu_Qin_Xinqiao_Zhang_Julian_Goddy_Ramamoorthy_Ramesh_Lane_W_Martin_and_Joshua_C_Agar_undated-gb,Saremi2019-kb,Saremi2018-np`. Most of these materials require far-from-equilibrium synthesis methods to achieve complex stoichiometry, finely tuned heterointerfaces, superlattices, and compositional gradients—all of which are essential for enabling emergent functionalities. \n",
     "While many non-equilibrium thin-film synthesis techniques exist, pulsed laser deposition (PLD) is distinguished by its ability to reproducibly deposit complex stoichiometry with relative simplicity in a laboratory setting—some systems even extending this capability to the wafer scale {cite:p}`solmates`.\n",
     "PLD operates by directing a high-intensity pulsed laser onto a target material under low—typically oxidizing—ambient pressure. This process generates a highly energetic plasma plume ($5{,}000\\,\\text{--}\\,20{,}000~\\text{K}$)  that transfers ablated species onto a substrate. \n",
     "The inherently non-equilibrium nature of PLD enables fine-tuning of stoichiometry, crystallographic orientation, and surface morphology through extreme sensitivity to growth parameters, but this same sensitivity also poses significant challenges for high-reproducibility growth, as minor fluctuations in plume dynamics, ambient conditions, or target surface state can substantially impact film quality{cite:p}`Schou2009-zg,Liu2012-jq,Siebenhofer2021-km,Lee2016-au,Christen2008-sh,Maria1998-vd`.\n",
@@ -271,38 +270,6 @@
     "\n",
     "To that end, we focused on two critical metrics: maximum plume area and incident velocity. These metrics are statistically represented using violin plots in {numref}`figure5`."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
