--- a/jupyterbook/manuscript.ipynb
+++ b/jupyterbook/manuscript.ipynb
@@ -96,7 +96,7 @@
     "## Results and Discussion\n",
     "\n",
     "Five $\\text{SrRuO}_3/\\text{SrTiO}_3$ (001) thin films (denoted as growth G1–G5) were sequentially deposited using the same $\\text{SrRuO}_3$ target, without sanding or restoring the target surface between growths, while keeping all other deposition conditions constant. This set of samples ({numref}`figure1`a–e) was used to evaluate the effects of progressive target surface degradation on film growth. In addition, a separate comparison was made between a film deposited using sample G5 and another deposited after the same target was used to grow other chemistries (denoted as contaminated growth C-G6; {numref}`figure1`e, f). This comparison explores how spatial variations in the target’s surface chemistry and morphology influence the resulting film properties (G5 vs. C-G6). All films were grown under identical, optimized deposition conditions, with the only variable being the condition of the target surface. The substrate temperature was maintained at $700^\\circ\\text{C}$, and deposition was carried out at a background pressure of 100 $\\text{mTorr}$ in an oxygen atmosphere, using a laser fluence of $1.6\\,\\text{mJ/cm}^2$. These parameters align with reported values in prior studies.The laser spot had a rectangular shape, measuring 0.93 mm in width and 2.46 $\\text{mm}$ in height. A computer-controlled motion scanner was used to evenly ablate the target surface.\n",
-    "Additional experimental details are provided in [Section 6.5](#section-65).  <!-- Update link target based on section title -->\n"
+    "Additional experimental details are provided in *Methods*.\n"
    ]
   },
   {
@@ -168,7 +168,7 @@
     "Additionally, the surface morphology of the films was characterized using tapping mode atomic force microscopy (AFM) ({numref}`figure3`). A comparison of samples G1 through G5 reveals a progressive decrease in surface roughness with each subsequent deposition. This trend is accompanied by a noticeable reduction in the density of surface pits or holes. Such holes are typically attributed to insufficient deposition rates. Paradoxically, however, one would expect a slight reduction in growth rate with successive depositions until a steady state is reached. Counterintuitively—and despite current understanding of plume dynamics evolution—the observed morphology is often proposed to be mitigated by increasing the growth rate, which can be achieved through higher laser repetition rates, increased fluence, or lower ambient pressure.\n",
     "\n",
     "Further analysis of interpolated line traces from AFM scans ({numref}`figure3`)g revealed that these holes likely penetrate to the substrate surface. Such features likely result from non-ideal deposition dynamics during the initial growth stages of $\\text{SrRuO}_3$. One plausible hypothesis is that initial instability in the deposition conditions leads to unstable plume dynamics, disrupting proper adatom bonding to the SrTiO$_3$ substrate—an essential requirement for layer-by-layer growth during the early stages. As a result, subsequent adatoms struggle to deposit uniformly due to the persistent holes. Overall, our observations point to a marked improvement in thin film quality over time, consistent with conclusions drawn from XRD analyses. Additionally, the comparison between samples G1 and G2 suggests that target inhomogeneity plays a significant role in increasing surface roughness.\n",
-    "Further analysis of interpolated line traces from AFM scans ({numref}`figure3g`) revealed that these holes likely penetrate to the substrate surface. Such features likely result from non-ideal deposition dynamics during the initial growth stages of $\\text{SrRuO}_3$. One plausible hypothesis is that initial instability in the deposition conditions leads to unstable plume dynamics, disrupting proper adatom bonding to the SrTiO$_3$ substrate—an essential requirement for layer-by-layer growth during the early stages. As a result, subsequent adatoms struggle to deposit uniformly due to the persistent holes. Overall, our observations point to a marked improvement in thin film quality over time, consistent with conclusions drawn from XRD analyses. Additionally, the comparison between samples G1 and G2 suggests that target inhomogeneity plays a significant role in increasing surface roughness.\n",
+    "Further analysis of interpolated line traces from AFM scans ({numref}`figure3`g) revealed that these holes likely penetrate to the substrate surface. Such features likely result from non-ideal deposition dynamics during the initial growth stages of $\\text{SrRuO}_3$. One plausible hypothesis is that initial instability in the deposition conditions leads to unstable plume dynamics, disrupting proper adatom bonding to the SrTiO$_3$ substrate—an essential requirement for layer-by-layer growth during the early stages. As a result, subsequent adatoms struggle to deposit uniformly due to the persistent holes. Overall, our observations point to a marked improvement in thin film quality over time, consistent with conclusions drawn from XRD analyses. Additionally, the comparison between samples G1 and G2 suggests that target inhomogeneity plays a significant role in increasing surface roughness.\n",
     "\n",
     "Distinct differences in growth mode were also observed among the samples. In {numref}`figure3`a, the surface exhibits an island-like step-flow morphology, where step orientation appears to radiate from the center of circular clusters. This results in hybrid growth behavior combining features of both 2D and 3D growth. In contrast, {numref}`figure3`c and {numref}`figure3`f show step bunching, where several atomic steps coalesce to form terraces of greater height at irregular intervals. These features are more clearly resolved in the larger-area (10 $\\mu\\text{m}$ × 10 $\\mu\\text{m}$) image of {numref}`figure3`a and the higher-resolution (5 $\\mu\\text{m}$ × 5 $\\mu\\text{m}$) scans in {numref}`figureS1` . Deviations from uniform step-flow growth—such as island nucleation or step bunching—are often associated with less desirable film quality.\n"
    ]
@@ -192,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Experiment Design for FF-PDI\n",
+    "### Experiment Design for FF-PDI\n",
     "\n",
     "For all growths, we performed full-frame PDI transverse to the plume axis, as shown in {numref}`figure1`g. A Shimadzu Hyper Vision HPV-X2 high-speed video camera was used for plume imaging. This camera is one of the world’s fastest CCD cameras, featuring an FTCMOS2 image sensor and capable of capturing up to 2 million frames per second—or 1 frame per 500 ns (see *Methods*). The camera is triggered by the laser pulse signal but operates with a continuous rolling acquisition mode, which compensates for triggering delays with 200 ns exposures.\n",
     "\n",
@@ -209,7 +209,7 @@
     }
    },
    "source": [
-    "## Plume Dynamics Introduction\n",
+    "### Plume Dynamics Introduction\n",
     "\n",
     "The dynamics of laser-induced plumes play a critical role in understanding the deposition process, particularly in relation to how target surface morphology influences growth. In this study, plume behavior is analyzed using a custom-developed Python package, *Plume-Learn*, which enables precise, automated analysis of plume evolution. The acquired plume data consists of full-frame images with a resolution of 1366 × 768 pixels, and each plume event is captured across 128 frames. Under typical deposition conditions, more than 350 full-frame plumes can be recorded per deposition, depending on the data transfer speed and system buffering capacity.\n",
     "\n",
@@ -235,7 +235,7 @@
     "\n",
     "These parameters are visualized using time-resolved line plots in {numref}`figure4`a–{numref}`figure4`c, showing the time-dependent average plume area, plume distance, and velocity as a function of travel distance, respectively. Each plot represents statistical averages computed from approximately 350 full-frame plume sequences recorded during a single deposition. Shaded regions in the plots indicate the range of variation across plume events, capturing pulse-to-pulse fluctuations.\n",
     "\n",
-    "The temporal evolution of the plume follows the four-stage process described earlier. Since laser ablation occurs on the order of tens of picoseconds—much faster than the 500-nanosecond temporal resolution of our PDI system—only the first available frame at $t = 1\\,\\mu\\text{s}$ captures the laser incidence on the target. This frame corresponds to the initial appearance of the plume, as shown in the embedded plume image in {numref}`figure4` and representative frames in {numref}`figure S3`, {numref}`figure S4`, {numref}`figure S5`, {numref}`figure S6`, {numref}`figure S7`, and {numref}`figure S8`.\n",
+    "The temporal evolution of the plume follows the four-stage process described earlier. Since laser ablation occurs on the order of tens of picoseconds—much faster than the 500-nanosecond temporal resolution of our PDI system—only the first available frame at $t = 1\\,\\mu\\text{s}$ captures the laser incidence on the target. This frame corresponds to the initial appearance of the plume, as shown in the embedded plume image in {numref}`figure4` and representative frames in {numref}`figureS3`, {numref}`figureS4`, {numref}`figureS5`, {numref}`figureS6`, {numref}`figureS7`, and {numref}`figureS8`.\n",
     "\n",
     "As the plasma plume forward propagates, the target ejects high-energy ionized atoms and atomic clusters. The plume reaches its maximum volume and velocity around $t = 3\\,\\mu\\text{s}$, after which it begins to detach from the target surface. It then propagates toward the substrate, completing the material transfer process. Under certain conditions—such as reduced ambient pressure or elevated laser fluence—plume rebound may occur during substrate interaction. The incident velocity is estimated by averaging the speed of the plume prior to the point at which it becomes untraceable in the recorded sequence.\n"
    ]
@@ -247,8 +247,8 @@
     ":::{figure-md} figure4\n",
     "<img src=\"../figures/Figure4-Plume_area_distance_velocity_average.png\" style=\"width:auto;\">\n",
     "\n",
-    "Plume sample frames and the plume metrics for plume description and evaluation. (a) Plume area over time for samples G1–t5 (s1) and C-G6. A series of plume images are included as examples to illustrate how plume area is determined. (b) Plume transport distance over time. Example plume images are also shown with markers indicating plume position. (c) Plume transport velocity as a function of distance. The red dashed lines mark the velocity range used for estimating the incident velocity.(c) Plume transport velocity as a function of distance. The red dashed lines mark the velocity range used for estimating the incident velocity.\n",
-    ":::\n"
+    "Plume sample frames and the plume metrics for plume description and evaluation. (a) Plume area over time for samples G1, G2, G3, G4, G5, and C-G6. A series of plume images are included as examples to illustrate how plume area is determined. (b) Plume transport distance over time. Example plume images are also shown with markers indicating plume position. (c) Plume transport velocity as a function of distance. The red dashed lines mark the velocity range used for estimating the incident velocity.(c) Plume transport velocity as a function of distance. The red dashed lines mark the velocity range used for estimating the incident velocity.\n",
+    ":::"
    ]
   },
   {
@@ -264,8 +264,13 @@
     "To address this concern, we apply statistical analysis methods—including plume variation analysis and anomaly detection—to identify subtle differences in plume behavior that might correlate with changes in film structure or quality. Specifically, we extract and summarize two key metrics: maximum plume cross-sectional area and incident velocity for each individual plume. These distributions are used to evaluate two main aspects:\n",
     "\n",
     "1. The relationship between plume dynamics and the evolving target surface condition over time  \n",
-    "2. The correlation between plume behavior and spatial variation across the target surface\n",
-    "\n",
+    "2. The correlation between plume behavior and spatial variation across the target surface"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Plume Dynamics Correlation with Time-Resolved Target Surface\n",
     "\n",
     "To investigate how laser ablation–induced changes in target surface morphology influence the quality of $\\text{SrRuO}_3$ thin films, we analyzed plume dynamics across sequentially deposited samples G1–G5. While the average plume area, travel distance, and incident velocity appear broadly similar across these samples, this superficial uniformity underscores the importance of statistical analysis to detect subtle but potentially significant variations in plume behavior during deposition.\n",
@@ -307,7 +312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plume Dynamics Correlation with Spatial Variation in the Target Surface\n",
+    "### Plume Dynamics Correlation with Spatial Variation in the Target Surface\n",
     "\n",
     "To further investigate the origins of plume dynamics variability, we examined the correlation between plume behavior and target surface morphology. We hypothesize that non-uniform ablation due to target surface contamination or morphology can introduce fluctuations in plume energy, composition, and deposition efficiency. These fluctuations may, in turn, influence thin film quality. To test this hypothesis, we compared two samples: sample C-G6, which was deposited using a target with localized surface contamination, and sample G5, which was grown under identical conditions but with a more uniform target surface.\n",
     "\n",
@@ -364,12 +369,134 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Methods\n",
+    "\n",
+    "### Sample Preparation\n",
+    "\n",
+    "Heteroepitaxial $\\text{SrRuO}_3$ thin films were grown from single-crystal $\\text{SrRuO}_3$ (001) targets on SrTiO$_3$ (001) substrates by pulsed laser deposition (PLD) at 700 °C in a background pressure of 100 mTorr with an O$_2$ atmosphere. The laser fluence was 1.6 J/cm$^2$, using a spot size of 2.28 mm$^2$ (0.93 mm width and 2.46 mm height), with a repetition rate of 5 Hz.\n",
+    "\n",
+    "Each $\\text{SrRuO}_3$ thin film was deposited with 12,357 laser pulses, resulting in a thickness of approximately 60 nm under optimized conditions. The target was scanned horizontally at 5 mm/s and vertically at 1.5 mm/s (at each line end) to ensure uniform ablation across the surface.\n",
+    "\n",
+    "Following deposition, the samples were cooled to room temperature in an oxygen atmosphere at a pressure of up to $3 \\times 10^5$ mTorr.\n",
+    "\n",
+    "For samples G1 through t5, the same $\\text{SrRuO}_3$ target was used without polishing between depositions in order to study the effects of target surface evolution. In contrast, sample C-G6 was deposited using a target that had been intentionally contaminated through intermittent use over the course of a month with other oxide materials (e.g., SrTiO$_3$), to evaluate the effects of surface inhomogeneity.\n",
+    "\n",
+    "### X-ray Diffraction\n",
+    "\n",
+    "$\\text{SrRuO}_3$ thin films were characterized by X-ray diffraction using an Empyrean Gen 3 (Malvern Panalytical) instrument with Cu-K$\\alpha$ radiation ($\\lambda = 1.5406$ Å). Measurements included $\\omega$–2$\\theta$ scans, $\\omega$ rocking curves, and reciprocal space mapping (RSM).\n",
+    "\n",
+    "### Scanning Probe Microscopy\n",
+    "\n",
+    "Thin-film surface morphology was characterized using an Atomic Force Microscope (AFM, Cypher model) from Oxford Instruments.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## References\n",
     "\n",
     "```{bibliography}\n",
     ":style: unsrt\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Supporting Information"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":::{figure-md} figureS1\n",
+    "<img src=\"../figures/FigureS1-AFM_5um_lineprofile.png\" style=\"width:auto;\">\n",
+    "\n",
+    "(a-f) AFM scans of 5×5$\\mu\\text{m}$ area of sample G1-t5(s1) and C-G6. (g-i) Surface cross section along the indicated line for sample G2, G3 and C-G6.\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":::{figure-md} figureS2\n",
+    "<img src=\"../figures/FigureS2-PLD_logging.png\" style=\"width:auto;\">\n",
+    "\n",
+    "Diagram illustration of PLD digital logging system with step procedures.\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":::{figure-md} figureS3\n",
+    "<img src=\"../figures/FigureS3-Plume_Sample_Frames-G1.png\" style=\"width:800px;\">\n",
+    "\n",
+    "Samples of plume frames for sample G1.\n",
+    ":::\n",
+    ":::{figure-md} figureS4\n",
+    "<img src=\"../figures/FigureS4-Plume_Sample_Frames-G2.png\" style=\"width:800px;\">\n",
+    "\n",
+    "Samples of plume frames for sample G2.\n",
+    ":::\n",
+    "\n",
+    ":::{figure-md} figureS5\n",
+    "<img src=\"../figures/FigureS5-Plume_Sample_Frames-G3.png\" style=\"width:800px;\">\n",
+    "\n",
+    "Samples of plume frames for sample G3.\n",
+    ":::\n",
+    "\n",
+    ":::{figure-md} figureS6\n",
+    "<img src=\"../figures/FigureS6-Plume_Sample_Frames-G4.png\" style=\"width:800px;\">\n",
+    "\n",
+    "Samples of plume frames for sample G4.\n",
+    ":::\n",
+    "\n",
+    ":::{figure-md} figureS7\n",
+    "<img src=\"../figures/FigureS7-Plume_Sample_Frames-G5.png\" style=\"width:800px;\">\n",
+    "\n",
+    "Samples of plume frames for sample G5.\n",
+    ":::\n",
+    "\n",
+    ":::{figure-md} figureS8\n",
+    "<img src=\"../figures/FigureS8-Plume_Sample_Frames-C_G6.png\" style=\"width:800px;\">\n",
+    "\n",
+    "Samples of plume frames for sample C-G6.\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":::{figure-md} figureS9\n",
+    "<img src=\"../figures/FigureS9-Plume_area_history.png\" style=\"width:800px;\">\n",
+    "\n",
+    "(a-f) Plume area with time with indexed plume history for sample G1, G2, G3, G4, G5, and C-G6.\n",
+    ":::\n",
+    "\n",
+    ":::{figure-md} figureS10\n",
+    "<img src=\"../figures/FigureS10-Plume_distance_history.png\" style=\"width:800px;\">\n",
+    "\n",
+    "(a-f) Plume distance with time with indexed plume history for sample G1, G2, G3, G4, G5, and C-G6.\n",
+    ":::\n",
+    "\n",
+    ":::{figure-md} figureS11\n",
+    "<img src=\"../figures/FigureS11-Plume_velocity_history.png\" style=\"width:800px;\">\n",
+    "\n",
+    "(a-f) Plume velocity with distance with indexed plume history for sample G1, G2, G3, G4, G5, and C-G6.\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
